# bible_tracker

./: CLAUDE.md  LICENSE  README.md  bible_tracker.db  database.py  gitignore  main.py  pyproject.toml  seed_db.py  test_bible_tracker.db  test_db.py  test_main_routes.py
data/: BIBLE_DATA_C.csv  BIBLE_DATA_J.csv  BIBLE_DATA_P.csv
models/: book.py  reading.py
routes/: progress.py  readings.py
schemas/: book.py  progress.py  reading.py
static/: index.html  js.js  styles.css
